# WarheadFileWatcher

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt
src/app/: CMakeLists.txt  Main.cpp  WarheadFileWatcher.conf.dist
src/cmake/macros/: CheckPlatform.cmake
src/common/: Define.h
src/common/Utilities/: StringFormat.h
src/tests/: CMakeLists.txt  main.cpp
src/tests/common/: FileUtils.cpp
src/watcher/: CMakeLists.txt
src/watcher/Async/: AsyncQueueWorker.cpp  AsyncQueueWorker.h  AsyncWatcherOperation.cpp  AsyncWatcherOperation.h  WatcherWorker.cpp  WatcherWorker.h
src/watcher/Watcher/: Watcher.cpp  Watcher.h
